--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.cyclingproject">
+    package="com.alpha.cyclingproject">
    <application
         android:label="cyclingproject"
         android:name="${applicationName}"
