--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,12 +20,12 @@ version: 1.0.5+5
 environment:
   sdk: ">=2.17.6 <3.0.0"
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
+  # Dependencies specify other packages that your package needs in order to work.
+  # To automatically upgrade your package dependencies to the latest versions
+  # consider running `flutter pub upgrade --major-versions`. Alternatively,
+  # dependencies can be manually updated by changing the version numbers below to
+  # the latest version available on pub.dev. To see which dependencies have newer
+  # versions available, run `flutter pub outdated`.
 
 dependencies:
   flutter:
@@ -36,7 +36,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   latlong2: ^0.8.1
   flutter_map: ^3.0.0
-  dynamic_color: ^1.3.0
+  google_nav_bar: ^5.0.6
+  firebase_auth: ^4.1.3
+  firebase_core: ^2.3.0
+  email_validator: ^2.1.17
+  cloud_firestore: ^4.1.0
 
 dev_dependencies:
   flutter_test:
@@ -57,12 +61,16 @@ flutter:
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
+
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
