--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_core: ^2.3.0
   email_validator: ^2.1.17
   cloud_firestore: ^4.1.0
+  geolocator: ^5.1.5
 
 dev_dependencies:
   flutter_test:
