--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   email_validator: ^2.1.17
   cloud_firestore: ^4.1.0
   geolocator: ^5.1.5
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_test:
