--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   geolocator: ^5.1.5
   http: ^0.13.3
   open_route_service: ^1.2.2
-
+  flutter_speed_dial: ^6.2.0
 
 dev_dependencies:
   flutter_test:
