--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   http: ^0.13.3
   open_route_service: ^1.2.2
   flutter_speed_dial: ^6.2.0
+  settings_ui: ^2.0.2
+  google_fonts: ^3.0.1
 
 dev_dependencies:
   flutter_test:
