--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   image_picker: ^0.8.6
   firebase_storage: ^11.0.8
   sliding_up_panel: ^2.0.0+1
+  flutter_slidable: ^2.0.0
 
 dev_dependencies:
   flutter_test:
