--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   flutter_slidable: ^2.0.0
   awesome_snackbar_content: ^0.1.0
   flutter_native_splash: ^2.2.16
+  device_info_plus: ^8.0.0
 
 dev_dependencies:
   flutter_test:
