--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   awesome_snackbar_content: ^0.1.0
   flutter_native_splash: ^2.2.16
   device_info_plus: ^8.0.0
+  introduction_screen: ^3.1.3
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
